# tricot

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: develop.yml  main.yml  master.yml  pypi.yml
docs/: README.md
docs/extractors/: README.md
docs/plugins/: README.md
docs/validators/: README.md
examples/: example1.yml  example2.yml  example3.yml  example4.yml
examples/example3/: curl.yml  wget.yml
resources/bash_completion.d/: tricot
tests/: README.md
tests/pytest/: conftest.py
tests/pytest/Extractors/RegexExtractor/: regex_extractor_test.py
tests/pytest/Misc/: group_matching_test.py  group_parsing_test.py
tests/pytest/Plugins/CleanupCommandPlugin/: cleanup_command_test.py
tests/pytest/Plugins/CleanupPlugin/: cleanup_test.py
tests/pytest/Plugins/CopyPlugin/: copy_test.py
tests/pytest/Plugins/HttpListenerPlugin/: http_test.py
tests/pytest/Plugins/MkdirPlugin/: mkdir_test.py
tests/pytest/Plugins/OsCommandPlugin/: command_test.py
tests/pytest/Validators/ContainsValidator/: contains_test.py  sample.txt
tests/pytest/Validators/CountValidator/: count_test.py
tests/pytest/Validators/DirectoryExistsValidator/: directory_exists_test.py
tests/tricot/: tricot.yml
tests/tricot/tricot-tests/: extra-tests.yml  extractor-tests.yml  plugin-tests.yml  resource-tests.yml  validator-tests.yml
tricot/: __init__.py  command.py  condition.py  constants.py  docker.py  extractor.py  logging.py  main.py  plugin.py  resource.py  template.py  tricot.py  utils.py  validation.py
(+85 files in other folders)
