[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'tricot'
version = '1.13.0'
dependencies = [
  'PyYAML',
  'termcolor',
  'docker',
]
requires-python = '>=3.9'
authors = [
  {name = 'Tobias Neitzel (@qtc_de)'},
]
maintainers = [
  {name = 'Tobias Neitzel (@qtc_de)'}
]
description = 'Trivial Command Testser'
readme = 'README.md'
license = {file = 'LICENSE'}
keywords = ['testing', 'validation', 'test-automation', 'end-to-end-testing', 'testing-framework']
classifiers = [
  'Programming Language :: Python :: 3',
    'Operating System :: Unix',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
]

[project.urls]
Homepage = 'https://github.com/qtc-de/tricot'
Documentation = 'https://github.com/qtc-de/tricot/tree/main/docs'
Repository = 'https://github.com/qtc-de/tricot'
'Bug Tracker' = 'https://github.com/qtc-de/tricot/issues'
Changelog = 'https://github.com/qtc-de/tricot/blob/main/CHANGELOG.md'

[project.scripts]
tricot = 'tricot.main:main'
